# DeltaruneChinesePatcherCpp

./: .gitignore  CMakeLists.txt  LICENSE  charset.txt  readme-zh_CN.txt  readme-zh_TW.txt  xmake.lua
app/: win.rc
asset/: readme-zh_CN.txt
asset/lang/: zh_CN.json
font/: main.fnt
lang/: zh_CN.json  zh_TW.json
src/: Asset.h  main.cpp
src/basicObject/: BOButton.cpp  BOButton.h  BOImage.cpp  BOImage.h  BOScrollText.cpp  BOScrollText.h  BOText.cpp  BOText.h
src/engine/: Animation.cpp  Animation.h  Asset.h  Atlas.cpp  Atlas.h  Camera.cpp  Camera.h  DownloadManager.cpp  DownloadManager.h  DownloadTask.cpp  DownloadTask.h  Game.cpp  Game.h  GameConfig.cpp  GameConfig.h  GameGlobal.h  GameManager.cpp  GameManager.h  GameObject.h  GameScene.cpp  GameScene.h  GameUtil.cpp  GameUtil.h  GameValues.h  LangManager.cpp  LangManager.h  LogManager.cpp  LogManager.h  Scene.h  Timer.cpp  Timer.h  Util.h  Vecto2.cpp  Vector2.h
src/extra/: WindowsIncludeFix.h  WindowsIncludeSolver.h
src/object/: OCheckGamePath.cpp  OCheckGamePath.h  OCheckTool.cpp  OCheckTool.h  OInstallPatch.cpp  OInstallPatch.h  OPatchValue.cpp  OPatchValue.h  OReadme.cpp  OReadme.h
src/scene/: SAbout.cpp  SAbout.h  SInstaller.cpp  SInstaller.h  SPatch.cpp  SPatch.h  SReadme.cpp  SReadme.h
